fat: new formula for cosnine

--- a/packages/web/experimentation/causticEffect.ipynb
+++ b/packages/web/experimentation/causticEffect.ipynb
@@ -38,9 +38,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting matplotlib\n",
+      "  Downloading matplotlib-3.8.3-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (11.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.6/11.6 MB\u001b[0m \u001b[31m40.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hCollecting cycler>=0.10\n",
+      "  Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
+      "Collecting fonttools>=4.22.0\n",
+      "  Downloading fonttools-4.50.0-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.6/4.6 MB\u001b[0m \u001b[31m47.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m0:01\u001b[0m\n",
+      "\u001b[?25hCollecting kiwisolver>=1.3.1\n",
+      "  Downloading kiwisolver-1.4.5-cp310-cp310-manylinux_2_12_x86_64.manylinux2010_x86_64.whl (1.6 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.6/1.6 MB\u001b[0m \u001b[31m24.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: packaging>=20.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from matplotlib) (24.0)\n",
+      "Collecting pillow>=8\n",
+      "  Downloading pillow-10.3.0-cp310-cp310-manylinux_2_28_x86_64.whl (4.5 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.5/4.5 MB\u001b[0m \u001b[31m58.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m\n",
+      "\u001b[?25hCollecting numpy<2,>=1.21\n",
+      "  Downloading numpy-1.26.4-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (18.2 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m18.2/18.2 MB\u001b[0m \u001b[31m35.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.7 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from matplotlib) (2.9.0.post0)\n",
+      "Collecting pyparsing>=2.3.1\n",
+      "  Downloading pyparsing-3.1.2-py3-none-any.whl (103 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m103.2/103.2 kB\u001b[0m \u001b[31m5.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting contourpy>=1.0.1\n",
+      "  Downloading contourpy-1.2.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (305 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m305.2/305.2 kB\u001b[0m \u001b[31m14.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.5 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib) (1.16.0)\n",
+      "Installing collected packages: pyparsing, pillow, numpy, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
+      "Successfully installed contourpy-1.2.1 cycler-0.12.1 fonttools-4.50.0 kiwisolver-1.4.5 matplotlib-3.8.3 numpy-1.26.4 pillow-10.3.0 pyparsing-3.1.2\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: numpy in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (1.26.4)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting ipywidgets\n",
+      "  Downloading ipywidgets-8.1.2-py3-none-any.whl (139 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m139.4/139.4 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: ipython>=6.1.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipywidgets) (8.23.0)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipywidgets) (5.14.2)\n",
+      "Collecting jupyterlab-widgets~=3.0.10\n",
+      "  Downloading jupyterlab_widgets-3.0.10-py3-none-any.whl (215 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m215.0/215.0 kB\u001b[0m \u001b[31m10.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting widgetsnbextension~=4.0.10\n",
+      "  Downloading widgetsnbextension-4.0.10-py3-none-any.whl (2.3 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.3/2.3 MB\u001b[0m \u001b[31m35.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: comm>=0.1.3 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: pexpect>4.3 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (4.9.0)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (3.0.43)\n",
+      "Requirement already satisfied: decorator in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (5.1.1)\n",
+      "Requirement already satisfied: matplotlib-inline in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.1.6)\n",
+      "Requirement already satisfied: stack-data in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.6.3)\n",
+      "Requirement already satisfied: typing-extensions in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (4.10.0)\n",
+      "Requirement already satisfied: jedi>=0.16 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (0.19.1)\n",
+      "Requirement already satisfied: exceptiongroup in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (1.2.0)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython>=6.1.0->ipywidgets) (2.17.2)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from jedi>=0.16->ipython>=6.1.0->ipywidgets) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from pexpect>4.3->ipython>=6.1.0->ipywidgets) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython>=6.1.0->ipywidgets) (0.2.13)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.4.1)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (2.0.1)\n",
+      "Requirement already satisfied: pure-eval in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from stack-data->ipython>=6.1.0->ipywidgets) (0.2.2)\n",
+      "Requirement already satisfied: six>=1.12.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from asttokens>=2.1.0->stack-data->ipython>=6.1.0->ipywidgets) (1.16.0)\n",
+      "Installing collected packages: widgetsnbextension, jupyterlab-widgets, ipywidgets\n",
+      "Successfully installed ipywidgets-8.1.2 jupyterlab-widgets-3.0.10 widgetsnbextension-4.0.10\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: ipython in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (8.23.0)\n",
+      "Requirement already satisfied: pexpect>4.3 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (4.9.0)\n",
+      "Requirement already satisfied: exceptiongroup in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (1.2.0)\n",
+      "Requirement already satisfied: prompt-toolkit<3.1.0,>=3.0.41 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (3.0.43)\n",
+      "Requirement already satisfied: jedi>=0.16 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (0.19.1)\n",
+      "Requirement already satisfied: stack-data in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (0.6.3)\n",
+      "Requirement already satisfied: typing-extensions in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (4.10.0)\n",
+      "Requirement already satisfied: matplotlib-inline in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (0.1.6)\n",
+      "Requirement already satisfied: traitlets>=5.13.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (5.14.2)\n",
+      "Requirement already satisfied: decorator in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (5.1.1)\n",
+      "Requirement already satisfied: pygments>=2.4.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from ipython) (2.17.2)\n",
+      "Requirement already satisfied: parso<0.9.0,>=0.8.3 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from jedi>=0.16->ipython) (0.8.3)\n",
+      "Requirement already satisfied: ptyprocess>=0.5 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from pexpect>4.3->ipython) (0.7.0)\n",
+      "Requirement already satisfied: wcwidth in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from prompt-toolkit<3.1.0,>=3.0.41->ipython) (0.2.13)\n",
+      "Requirement already satisfied: asttokens>=2.1.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from stack-data->ipython) (2.4.1)\n",
+      "Requirement already satisfied: pure-eval in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from stack-data->ipython) (0.2.2)\n",
+      "Requirement already satisfied: executing>=1.2.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from stack-data->ipython) (2.0.1)\n",
+      "Requirement already satisfied: six>=1.12.0 in /workspaces/ParticleEffects/env/lib/python3.10/site-packages (from asttokens>=2.1.0->stack-data->ipython) (1.16.0)\n",
+      "\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.0.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m24.0\u001b[0m\n",
+      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install matplotlib\n",
     "%pip install numpy\n",
@@ -50,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2cb67a0630414e6f890357bcda5b9849",
+       "model_id": "4733da9ed8e44126b66d584061890256",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,58 +258,51 @@
     "\n",
     "The taylor series of cosine is (https://tutorial.math.lamar.edu/classes/calcii/taylorseries.aspx):\n",
     "\n",
-    "$$ cos(x) = \\Sigma_{n=0}^\\infty \\frac{f^n(a)}{n!}(x-a)^n = 1-\\frac{x^2}{2!}+\\frac{x^4}{4!}-\\frac{x^6}{6!}+... $$\n",
+    "$$ cos(x) = \\Sigma_{n=0}^\\infty \\frac{f^n(a)}{n!}(x-a)^n = 1-\\frac{x^2}{2!}+\\frac{x^4}{4!}-\\frac{x^6}{6!}+... = \\Sigma_{n=0}^\\infty \\frac{(-1)^n x^{2n}}{(2n)!} $$\n",
     "\n",
     "Assume $ a = 0 $, thus with, say $ x=c(1) $, we have:\n",
     "\n",
     "$$ cox(x) = cos(c(1)) = \\frac{cos(1)cos(c)}{cos(1)} $$\n",
     "\n",
-    "Let's find this ratio\n",
+    "Let's find this ratio:\n",
     "\n",
-    "$$ \\frac{cos(c)}{cos(1)} = \\frac{\\Sigma_{n=0}^\\infty \\frac{f^n(a)}{n!}(a)^n}{\\Sigma_{n=0}^\\infty \\frac{f^n(a)}{n!}(x)^n} = \\frac{\\Sigma_{n=0}^\\infty (c)^n}{\\Sigma_{n=0}^\\infty(1)^n} $$\n",
-    "\n",
-    "Let's try the Chebyshev's Polynomial\n",
-    "\n",
-    "cos(a) + cos(b) + cos(c) = T_a cos(1) + T_b cos(1) ... = (T)_a + T_b + T_c) cos(1)\n",
-    "\n",
-    "\n"
+    "$$ \\frac{cos(c)}{cos(1)} = \\frac{\\Sigma_{n=0}^\\infty \\frac{(-1)^n (c)^{2n}}{(2n)!}}{\\Sigma_{n=0}^\\infty \\frac{(-1)^n (1)^{2n}}{(2n)!}} = \\frac{\\Sigma_{n=0}^\\infty (c)^{2n}}{\\Sigma_{n=0}^\\infty(1)^{2n}} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(-0.7702111059446461, 2.894107769001238e+57)"
+       "(0.5318607213743555, 0.5318607213874849, 0.9843761827367724, 7.436528021772254)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import math\n",
-    "c = 2\n",
+    "c = 1.01\n",
     "\n",
     "# expansion1 = []\n",
     "# expansiona = []\n",
     "sumc, sum1 = 0, math.cos(1)\n",
     "shortsumc = 0\n",
     "\n",
-    "n = 100\n",
+    "n = 7\n",
     "for i in range(n):\n",
     "  # expansion1.append((-1) ** i * (1 ** (2 * i)) / math.factorial(2 * i))\n",
     "  # expansiona.append((-1) ** i * (c ** (2 * i)) / math.factorial(2 * i))\n",
     "  sumc += (-1) ** i * (c ** (2 * i)) / math.factorial(2 * i)\n",
     "  shortsumc += (c ** (2 * i))\n",
-    "shortsumc /= n\n",
     "\n",
-    "# expansiona, expansion1\n",
-    "math.cos(c)/sum1, sum1*shortsumc"
+    "# expansion a, expansion1\n",
+    "math.cos(c), sumc, math.cos(c)/sum1, shortsumc"
    ]
   },
   {
@@ -241,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
